<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=" "
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textColor="#673AB7"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <Button
        android:id="@+id/btnAC"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"

        android:backgroundTint="#673AB7"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/backspace"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btnAC"
        app:layout_constraintTop_toTopOf="@id/btnAC" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"

        android:backgroundTint="#673AB7"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAC" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="100dp"
        android:layout_height="80dp"

        android:backgroundTint="#673AB7"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn7"
        app:layout_constraintTop_toTopOf="@id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="100dp"
        android:layout_height="80dp"

        android:backgroundTint="#673AB7"
        android:text="@string/_9"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn8"
        app:layout_constraintTop_toTopOf="@id/btn8" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/division"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn9"
        app:layout_constraintTop_toTopOf="@id/btn9" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="100dp"
        android:layout_height="80dp"

        android:layout_marginStart="5dp"
        android:backgroundTint="#673AB7"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/_5"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn4"
        app:layout_constraintTop_toTopOf="@id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/_6"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn5"
        app:layout_constraintTop_toTopOf="@id/btn5" />

    <Button
        android:id="@+id/btnMultiplication"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/multiplication"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn6"
        app:layout_constraintTop_toTopOf="@id/btn6" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#673AB7"
        android:text="@string/_1"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn1"
        app:layout_constraintTop_toTopOf="@id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn2"
        app:layout_constraintTop_toTopOf="@id/btn2" />

    <Button
        android:id="@+id/btnSubtraction"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/substraction"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn3"
        app:layout_constraintTop_toTopOf="@id/btn3" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#673AB7"
        android:text="@string/dot"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toRightOf="@id/btnDot"
        app:layout_constraintTop_toTopOf="@id/btnDot" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/equal"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toRightOf="@id/btn0"
        app:layout_constraintTop_toTopOf="@id/btn0" />

    <Button
        android:id="@+id/btnAddition"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:backgroundTint="#673AB7"
        android:text="@string/addition"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btnEqual"
        app:layout_constraintTop_toTopOf="@id/btnEqual" />

</androidx.constraintlayout.widget.ConstraintLayout>